# csv2hpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  planets.hpp  test.csv
examples/: POI.hpp  POIs.csv  POIs.hpp  bucket_list.csv  bucket_list.hpp  currencies.csv  currencies.hpp  exoplanets.csv  exoplanets.hpp  monthly_sunspots.csv  monthly_sunspots.hpp  musical_notes.csv  musical_notes.hpp  pizzas.csv  pizzas.hpp  planets.hpp  titanic_passengers.csv  titanic_passengers.hpp
src/: CMakeLists.txt  csv2hpp.cpp  datatype_hints.csv  datatype_hints.hpp  hints.csv  hints.hpp  mapping.csv  planets.csv  planets.h  planets.hpp  supported_hints.csv  supported_hints.hpp
